feat: Start adding ops, spit apart in to modules add examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,9 @@ name = "deep-learning-lib"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "bbgrad"
+path = "src/lib.rs"
+
 [dependencies]
 ndarray = "0.17.2"
