feat: Finally have all the forward methods implemented

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ name = "bbgrad"
 path = "src/lib.rs"
 
 [dependencies]
-ndarray = { version = "0.17.2", features = ["blas"] }
+ndarray = { version = "0.17.2", features = ["blas", "std"] }
 ndarray-rand = "0.16.0"
 blas-src = { version = "0.14.0", features = ["openblas"] }
 openblas-src = { version = "0.10", features = ["cblas", "system"] }
